--- a/kadai_005/style.css
+++ b/kadai_005/style.css
@@ -1,4 +1,4 @@
-body {
+html {
     font-family: "Arial", "Meiryo", sans-serif;
     font-size: 20px;
     text-align: center;
@@ -18,7 +18,7 @@ h1, span {
     font-optical-sizing: auto;
     font-weight: weight;
     font-style: normal;
-    font-size:40px;
+    font-size: 2rem;
     letter-spacing: 1.2em;
     text-shadow: 1px 1px 2px gray;
     border-bottom: solid 3px rgb(115, 115, 114);
